--- a/.golangci.yml
+++ b/.golangci.yml
@@ -46,6 +46,10 @@ issues:
     - linters:
         - revive
       text: "unexported-return: exported func .+ returns unexported type .+, which can be annoying to use"
+    - path: cmd/[^/]+/.+\.go
+      text: exitAfterDefer
+      liners:
+        - gocritic
     # Exclude some linters from running on tests files.
     - path: _test\.go
       linters:
@@ -66,8 +70,8 @@ linters-settings:
     sections:
       - standard # Standard section: captures all standard packages.
       - default # Default section: contains all imports that could not be matched to another section type.
-      - prefix(yadro.dev/cyp) # Custom section: groups all imports with the specified Prefix.
-    skip-generated: true
+      - prefix(github.com/easyp-tech) # Custom section: groups all imports with the specified Prefix.
+    skip-generated: false
     # Enable custom order of sections.
     # If true, make the section order the same as the order of sections.
     custom-order: true
