--- a/example/config.yml
+++ b/example/config.yml
@@ -1,9 +1,9 @@
 server:
   external:
-    domain: "127.0.0.1:8080"
-    host: "127.0.0.1"
+    domain: "easyp.tech"
+    host: "0.0.0.0"
     port:
       connect: 8080
       metric: 8081
 storage:
-  root: "../cache"
+  root: "/cache"
