--- a/local.config.yml
+++ b/local.config.yml
@@ -1,11 +1,7 @@
-listen: 127.0.0.1:8080
-
-server:
-  external:
-    domain: "127.0.0.1:8080"
-    host: "127.0.0.1"
-    port:
-      connect: 8080
-      metric: 8081
-storage:
-  root: "../cache"
+listen:  127.0.0.1:8080
+domain:  localhost
+storage: ./cache
+tls:
+  cert: ./testdata/cert.pem
+  key:  ./testdata/key.pem
+  ca:   ./testdata/cert.pem
